Trabalhando com folha de estilo

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
               <p>A motivação para a criação do Bitcoin foi a crise de 2008. Para quem não lembra, os bancos foram os responsáveis por uma crise mundial (não entraremos em detalhes sobre a crise aqui nesse artigo, se você tiver interesse, pesquise por “crise subprime”).
               Uma limitação da humanidade segundo Satoshi Nakamoto (criador do Bitcoin) é que a única forma de se transferir dinheiro pela internet era por meio de um banco ou uma empresa financeira.</p>
         </div>
+        <br>
+        <div class="terc-bloco">
+          <p>A motivação para a criação do Bitcoin foi a crise de 2008. Para quem não lembra, os bancos foram os responsáveis por uma crise mundial (não entraremos em detalhes sobre a crise aqui nesse artigo, se você tiver interesse, pesquise por “crise subprime”).
+          Uma limitação da humanidade segundo Satoshi Nakamoto (criador do</p>
+        </div>
     </div>
 
   </body>
