--- a/servico-banker.html
+++ b/servico-banker.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Miner Client</title>
     <!-- Css linha -->
-    <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.ico" />
     <link rel="stylesheet" href="./css/main.css">
 
   </head>
