Change style page

--- a/index.html
+++ b/index.html
@@ -7,25 +7,24 @@
     <title>Miner Client</title>
     <!-- Css linha -->
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
 
   </head>
+
   <body>
-    <!-- <header class="header-page">
-      <h1>Scred</h1>
-    </header> -->
-    <!-- navbar -->
     <div>
+      <header>
         <nav class="op-menu">
           <div class="nav-top">
             <a class="active" href="index.html">Home</a>
-            <a href="">Serviços Banker</a>
+            <a class="" href="servico-banker.html">Serviços Banker</a>
             <a href="">Cotação Atual</a>
             <a href="">Contato</a>
             <a href="">Espaço do Cliente</a>
           </div>
         </nav>
-
+      </header>
         <img class="banner-hm" src="./img/banner01.jpg">
         <div class="seg-bloco">
           <h2>O que é Bitcoin e como funciona?</h2>
