--- a/servico-banker.html
+++ b/servico-banker.html
@@ -6,26 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Miner Client</title>
     <!-- Css linha -->
-    <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
-
   </head>
+  
   <body>
-    <!-- <header class="header-page">
-      <h1>Scred</h1>
-    </header> -->
-    <!-- navbar -->
     <div>
-        <nav class="op-menu">
-          <div class="nav-top">
-            <a class="active" href="index.html">Home</a>
-            <a href="">Serviços Banker</a>
-            <a href="">Cotação Atual</a>
-            <a href="">Contato</a>
-            <a href="">Espaço do Cliente</a>
-          </div>
-        </nav>
-
+        <header>
+          <nav class="op-menu">
+            <div class="nav-top">
+              <a class="" href="index.html">Home</a>
+              <a  class="active" href="">Serviços Banker</a>
+              <a href="">Cotação Atual</a>
+              <a href="">Contato</a>
+              <a href="">Espaço do Cliente</a>
+            </div>
+          </nav>
+        </header>
         <img class="banner-hm" src="./img/banner01.jpg">
 
     </div>
