Create second page

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
+    <!-- Bootstrap files -->
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
 
   </head>
 
-  <body>
+  <body class="bg-body">
     <div>
       <header>
-        <nav class="op-menu">
-          <div class="nav-top">
-            <a class="active" href="index.html">Home</a>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <a class="" href="index.html">Home</a>
             <a class="" href="servico-banker.html">Serviços Banker</a>
-            <a href="">Cotação Atual</a>
-            <a href="">Contato</a>
-            <a href="">Espaço do Cliente</a>
-          </div>
+            <a class="" href="">Cotação Atual</a>
+            <a class="" href="">Contato</a>
+            <a class="" href="">Espaço do Cliente</a>
         </nav>
       </header>
         <img class="banner-hm" src="./img/banner01.jpg">
