Change folder project

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Miner Client</title>
     <!-- Css linha -->
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./view/css/reset.css">
+    <link rel="stylesheet" href="./view/css/main.css">
     <!-- Bootstrap files -->
-    <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./config/bootstrap/css/bootstrap.min.css">
 
   </head>
 
