Packet Service Style

--- a/servico-banker.html
+++ b/servico-banker.html
@@ -30,14 +30,17 @@
             <li>
               <h2>Miner Moeda digital</h2>
               <img src="./img/give-money.png" alt="">
+              <p>Obtenha recurso computacional cloudresource.</p>
             </li>
             <li>
               <h2>Miner Debit Card</h2>
               <img src="./img/debit-card.png" alt="">
+              <p>Efetue transações com o minecard.</p>
             </li>
             <li>
               <h2>Miner Coin</h2>
               <img src="./img/miner.png" alt="">
+              <p>Compartilhe seus recursos através do minerclient.</p>
             </li>
           </ul>
 
