Create border for packet and service

--- a/servico-banker.html
+++ b/servico-banker.html
@@ -28,7 +28,7 @@
         <main>
           <ul class="packet-service">
             <li>
-              <h2>Miner Moeda digital</h2>
+              <h2>Moeda digital</h2>
               <img src="./img/give-money.png" alt="">
               <p>Obtenha recurso computacional cloudresource.</p>
             </li>
