Add Footer, Add Footer Css, Update View Layout, Links Pages

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <div>
       <header>
         <nav class="navbar navbar-inverse navbar-fixed-top">
-            <a class="" href="index.html">Home</a>
-            <a class="" href="servico-banker.html">Serviços Banker</a>
-            <a class="" href="">Cotação Atual</a>
-            <a class="" href="">Contato</a>
-            <a class="" href="">Espaço do Cliente</a>
+            <a  href="index.html">Home</a>
+            <a  href="servico-banker.html">Serviços Banker</a>
+            <a  href="cotacao-atual.html">Cotação Atual</a>
+            <a  href="contato-miner.html">Contato</a>
+            <a  href="space-customer.html">Espaço do Cliente</a>
         </nav>
       </header>
         <img class="banner-hm" src="./img/banner01.jpg">
@@ -37,8 +37,10 @@
           <p>A motivação para a criação do Bitcoin foi a crise de 2008. Para quem não lembra, os bancos foram os responsáveis por uma crise mundial (não entraremos em detalhes sobre a crise aqui nesse artigo, se você tiver interesse, pesquise por “crise subprime”).
           Uma limitação da humanidade segundo Satoshi Nakamoto (criador do</p>
         </div>
+        <br>
     </div>
-
+    <footer>
+      <img src="footer-bit.png" height="400px">
+    </footer>
   </body>
-
 </html>
