--- a/servico-banker.html
+++ b/servico-banker.html
@@ -19,9 +19,9 @@
           <nav class="navbar navbar-inverse navbar-fixed-top">
               <a class="" href="index.html">Home</a>
               <a class="active" href="">Serviços Banker</a>
-              <a class="" href="">Cotação Atual</a>
-              <a class="" href="">Contato</a>
-              <a class="" href="">Espaço do Cliente</a>
+              <a  href="cotacao-atual.html">Cotação Atual</a>
+              <a  href="contato-miner.html">Contato</a>
+              <a  href="space-customer.html">Espaço do Cliente</a>
           </nav>
         </header>
         <img class="banner-hm" src="./img/banner01.jpg">
