Fooder servico-banker

--- a/servico-banker.html
+++ b/servico-banker.html
@@ -25,7 +25,7 @@
           </nav>
         </header>
         <img class="banner-hm" src="./img/banner01.jpg">
-        <main>
+        <main class="seg-bloco">
           <ul class="packet-service">
             <li>
               <h2>Moeda digital</h2>
@@ -45,9 +45,9 @@
           </ul>
 
         </main>
-
-    </div>
-
+      </div>
+    <footer>
+      <img src="footer-bit.png" height="400px">
+    </footer>
   </body>
-
 </html>
